Fix spacing and font color

--- a/css/main.css
+++ b/css/main.css
@@ -159,7 +159,7 @@ h3 {
   float: left;
   font-size: 30px;
   margin-top: 20px;
-  margin-right: 200px;
+  margin-right: 170px;
   color: #fff;
   font-family:"Wellfleet";
   font-weight: bold;
@@ -186,7 +186,7 @@ h3 {
 }
 #IlliniLaundry{
   background-color: #fff;
-  color: #666666;
+  color: #4d4d4d;
   height: 100vh;
   margin: auto auto;
   overflow: hidden;
@@ -202,7 +202,7 @@ h3 {
 }
 #ACMChatbot{
   background-color: #fff;
-  color: #262626;
+  color: #4d4d4d;
   height: 100vh;
   margin: auto auto;
   overflow: hidden;
